# minor

./: .gitignore  README.md  execution.md  main.py  mini.txt  ppt.txt  pyproject.toml  requirements.txt
models/: ser_lightweight_20260410_113220_random_stratified_final.keras  ser_lightweight_20260410_120209_random_stratified_final.keras
outputs/logs/emotion_cnn_lstm_20260124_110236/train/: events.out.tfevents.1769232763.Niheshs-MacBook-Pro.local.83421.0.v2
outputs/logs/emotion_cnn_lstm_20260124_110236/validation/: events.out.tfevents.1769232769.Niheshs-MacBook-Pro.local.83421.1.v2
outputs/logs/emotion_cnn_lstm_20260124_111454/train/: events.out.tfevents.1769233500.Niheshs-MacBook-Pro.local.87362.0.v2
outputs/logs/emotion_cnn_lstm_20260124_111454/validation/: events.out.tfevents.1769233503.Niheshs-MacBook-Pro.local.87362.1.v2
src/: __init__.py  benchmark.py  config.py  data_loader.py  datasets.py  download_datasets.py  evaluate.py  feature_extraction.py  model.py  predict.py  splits.py  train.py
tests/: conftest.py  test_benchmark_determinism.py  test_data_integrity.py  test_features.py  test_split_protocols.py  test_training_smoke.py
